--- a/index.html
+++ b/index.html
@@ -14,6 +14,50 @@
   </head>
   <body>
     <!-- nav -->
+    <nav class="navbar navbar-expand-md navbar-light">
+        <div class="container-xxl">
+          <a href="#intro" class="navbar-brand">
+            <i class="bi bi-book-half"></i>
+            <span class="fw-bold text-secondary">Cartoon</span>
+          </a>
+  
+          <!-- toggle btn for mobile nav -->
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#main-nav"
+            aria-controls="main-nav"
+            aria-expanded="false"
+            aria-label="toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <div
+            class="collapse navbar-collapse justify-content-end align-center"
+            id="main-nav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a href="#topics" class="nav-link">About the Book</a>
+              </li>
+              <li class="nav-item">
+                <a href="#reviews" class="nav-link">Reviews</a>
+              </li>
+              <li class="nav-item">
+                <a href="#contact" class="nav-link">Get in touch</a>
+              </li>
+              <li class="nav-item d-md-none">
+                <a href="#pricing" class="nav-link">Pricing</a>
+              </li>
+              <li class="nav-item ms-2 d-none d-md-inline">
+                <a href="#pricing" class="btn btn-secondary">Buy Now</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <!-- nav -->
 
     <!-- carousel -->
