added - book review section - bootstrap icons - tabs

--- a/index.html
+++ b/index.html
@@ -501,7 +501,230 @@
     </section>
     <!-- book content -->
 
+    <!-- book review -->
+    <section id="reviews" class="bg-light">
+        <div class="container-lg">
+          <div class="text-center">
+            <h2><i class="bi bi-moon-stars"></i> Book Reviews</h2>
+            <p class="lead">What my students have said about the book...</p>
+          </div>
+  
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <div class="list-group">
+                <div class="list-group-item py-3">
+                  <div class="pb-2">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+  
+                    <i class="bi bi-star-half"></i>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <h5 class="mb-1">A must buy for kids</h5>
+                  <p class="mb-1">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Ipsam vel voluptatibus soluta rem iusto, praesentium ipsa hic
+                    quod doloribus rerum aliquid magni repudiandae dignissimos
+                    minima dolorum amet officia, eaque recusandae.
+                  </p>
+                  <small>Review by Mario</small>
+                </div>
+                <div class="list-group-item py-3">
+                  <div class="pb-2">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                  </div>
+                  <h5 class="mb-1">Just love the stories here</h5>
+                  <p class="mb-1">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Ipsam vel voluptatibus soluta rem iusto, praesentium ipsa hic
+                    quod doloribus rerum aliquid magni repudiandae dignissimos
+                    minima dolorum amet officia, eaque recusandae.
+                  </p>
+                  <small>Review by Mario</small>
+                </div>
+                <div class="list-group-item py-3">
+                  <div class="pb-2">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                  </div>
+                  <h5 class="mb-1">My kids is having a good time</h5>
+                  <p class="mb-1">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Ipsam vel voluptatibus soluta rem iusto, praesentium ipsa hic
+                    quod doloribus rerum aliquid magni repudiandae dignissimos
+                    minima dolorum amet officia, eaque recusandae.
+                  </p>
+                  <small>Review by Mario</small>
+                </div>
+                <div class="list-group-item py-3">
+                  <div class="pb-2">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                  </div>
+                  <h5 class="mb-1">Dora dora dora</h5>
+                  <p class="mb-1">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Ipsam vel voluptatibus soluta rem iusto, praesentium ipsa hic
+                    quod doloribus rerum aliquid magni repudiandae dignissimos
+                    minima dolorum amet officia, eaque recusandae.
+                  </p>
+                  <small>Review by Mario</small>
+                </div>
+                <div class="list-group-item py-3">
+                  <div class="pb-2">
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                  </div>
+                  <h5 class="mb-1">I wait for Thursdays to come</h5>
+                  <p class="mb-1">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Ipsam vel voluptatibus soluta rem iusto, praesentium ipsa hic
+                    quod doloribus rerum aliquid magni repudiandae dignissimos
+                    minima dolorum amet officia, eaque recusandae.
+                  </p>
+                  <small>Review by Mario</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    <!-- book review -->
+
     <!-- tab -->
+    <section>
+        <div class="container my-5">
+          <nav>
+            <div class="nav nav-tabs" id="nav-tab" role="tablist">
+              <button
+                class="nav-link active"
+                type="button"
+                data-bs-toggle="tab"
+                role="tab"
+                id="nav-home-tab"
+                data-bs-target="#nav-home"
+                aria-controls="nav-home"
+                aria-selected="true"
+              >
+                Home
+              </button>
+  
+              <button
+                class="nav-link"
+                id="nav-profile-tab"
+                data-bs-toggle="tab"
+                data-bs-target="#nav-profile"
+                type="button"
+                role="tab"
+                aria-controls="nav-profile"
+                aria-selected="false"
+              >
+                Profile
+              </button>
+              <button
+                class="nav-link"
+                data-bs-toggle="tab"
+                type="button"
+                role="tab"
+                aria-selected="false"
+                id="nav-contact-tab"
+                data-bs-target="#nav-contact"
+                aria-controls="nav-contact"
+              >
+                Contact
+              </button>
+            </div>
+          </nav>
+  
+          <div class="tab-content" id="nav-tabContent">
+            <div
+              class="tab-pane fade show active p-3"
+              id="nav-home"
+              role="tabpanel"
+              aria-labelledby="nav-home-tab"
+            >
+              <h2>Home</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sunt
+                non magnam sit voluptatem odio itaque. Amet dicta esse eaque non
+                illo itaque tempora ut, temporibus porro reiciendis accusamus id.
+              </p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis
+                eius incidunt error pariatur iusto, nobis illo deserunt? Impedit,
+                voluptas deleniti!
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+                temporibus maxime ducimus unde alias dignissimos et officia dolor
+                a repellendus quae aliquam itaque ut voluptatem, consectetur
+                reprehenderit quod voluptas nam.
+              </p>
+            </div>
+  
+            <div
+              class="tab-pane fade p-3"
+              id="nav-profile"
+              role="tabpanel"
+              aria-labelledby="nav-profile-tab"
+            >
+              <h2>Profile</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sunt
+                non magnam sit voluptatem odio itaque. Amet dicta esse eaque non
+                illo itaque tempora ut, temporibus porro reiciendis accusamus id.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+                temporibus maxime ducimus unde alias dignissimos et officia dolor
+                a repellendus quae aliquam itaque ut voluptatem, consectetur
+                reprehenderit quod voluptas nam.
+              </p>
+            </div>
+  
+            <div
+              class="tab-pane fade p-3"
+              id="nav-contact"
+              role="tabpanel"
+              aria-labelledby="nav-contact-tab"
+            >
+              <h2>Contact</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad sunt
+                non magnam sit voluptatem odio itaque. Amet dicta esse eaque non
+                illo itaque tempora ut, temporibus porro reiciendis accusamus id.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Obcaecati, architecto cumque hic quo explicabo ipsa ex modi est
+                illo quidem, nam, ipsam laboriosam id? Ipsam reiciendis neque
+                mollitia accusamus aliquam.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit
+                temporibus maxime ducimus unde alias dignissimos et officia dolor
+                a repellendus quae aliquam itaque ut voluptatem, consectetur
+                reprehenderit quod voluptas nam.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     <!-- tab -->
 
     <!-- contact form -->
