--- a/index.html
+++ b/index.html
@@ -850,12 +850,45 @@
     <!-- contact form -->
 
     <!-- footer -->
+    <section class="bg-light">
+        <div class="container">
+          <div class="text-center">
+            <h2>Stay in the Loop</h2>
+            <p class="lead">Get tge latest updates as they happen...</p>
+          </div>
+  
+          <div class="row justify-content-center">
+            <div class="col-md-8 text-center">
+              <p class="text-muted my-4">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam
+                nostrum provident aliquid magni neque, vel voluptatibus quasi
+                possimus delectus commodi beatae recusandae necessitatibus autem
+                error, unde officia! A distinctio est porro. Eaque, odit nesciunt
+                quidem dolorum rem tempora cum dignissimos explicabo distinctio
+                dolor fugit autem. Placeat est repellat officiis illum.
+              </p>
+              <button
+                class="btn btn-primary"
+                data-bs-toggle="modal"
+                data-bs-target="#reg-modal"
+              >
+                Register for updates
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     <!-- footer -->
+
+    <!-- bootstrap script bundle -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <!-- bootstrap script bundle -->
+
+    <!-- code to enable tooltip -->
     <script>
       var tooltipTriggerList = [].slice.call(
         document.querySelectorAll('[data-bs-toggle="tooltip"]')
@@ -864,5 +897,6 @@
         return new bootstrap.Tooltip(tooltipTriggerEl);
       });
     </script>
+    <!-- code to enable tooltip -->
   </body>
 </html>
