--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E Book</title>
+    <title>Cartoon Page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-md navbar-light">
       <div class="container-xxl">
         <a href="#intro" class="navbar-brand">
-          <i class="bi bi-book-half"></i>
+          <i class="bi bi-arrow-through-heart-fill"></i>
           <span class="fw-bold text-secondary">Cartoon</span>
         </a>
 
